--- a/MyWedding/MyWedding/MyWedding.csproj
+++ b/MyWedding/MyWedding/MyWedding.csproj
@@ -145,15 +145,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Wedding.resx</DependentUpon>
     </Compile>
+    <Compile Include="Utility\Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\Main\a11.png" />
-    <Content Include="Content\Images\Main\balcony.jpg" />
-    <Content Include="Content\Images\Main\flag swe.png" />
-    <Content Include="Content\Images\Main\flag uk.png" />
-    <Content Include="Content\Images\Main\lavendel.png" />
+    <Content Include="Content\Images\Main\Balcony.jpg" />
+    <Content Include="Content\Images\Main\Flag swe.png" />
+    <Content Include="Content\Images\Main\Flag uk.png" />
+    <Content Include="Content\Images\Main\Lavendel.png" />
+    <Content Include="Content\Images\Main\Nacka Church.jpg" />
     <Content Include="Content\Images\Slideshow\01.jpg" />
     <Content Include="Content\Images\Slideshow\02.jpg" />
     <Content Include="Content\Images\Slideshow\03.jpg" />
@@ -216,6 +218,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Contacts.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\TechnicalInfo.cshtml" />
+    <Content Include="Views\Home\Messages.cshtml" />
+    <Content Include="Views\Home\Program.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
