--- a/MyWedding/MyWedding/MyWedding.csproj
+++ b/MyWedding/MyWedding/MyWedding.csproj
@@ -135,15 +135,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Wedding.en-GB.Designer.cs">
-      <DependentUpon>Wedding.en-GB.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <Compile Include="Resources\Wedding.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Wedding.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Wedding.en-GB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Wedding.en-GB.resx</DependentUpon>
     </Compile>
     <Compile Include="Utility\Utility.cs" />
   </ItemGroup>
@@ -154,6 +154,7 @@
     <Content Include="Content\Images\Main\Balcony.jpg" />
     <Content Include="Content\Images\Main\Flag swe.png" />
     <Content Include="Content\Images\Main\Flag uk.png" />
+    <Content Include="Content\Images\Main\Flowers.jpg" />
     <Content Include="Content\Images\Main\Lavendel.png" />
     <Content Include="Content\Images\Main\Nacka Church.jpg" />
     <Content Include="Content\Images\Slideshow\01.jpg" />
@@ -221,6 +222,7 @@
     <Content Include="Views\Home\TechnicalInfo.cshtml" />
     <Content Include="Views\Home\Messages.cshtml" />
     <Content Include="Views\Home\Program.cshtml" />
+    <Content Include="Views\Home\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
