--- a/MyWedding/MyWedding/MyWedding.csproj
+++ b/MyWedding/MyWedding/MyWedding.csproj
@@ -156,6 +156,7 @@
     <Content Include="Content\Images\Main\Flag uk.png" />
     <Content Include="Content\Images\Main\Flowers.jpg" />
     <Content Include="Content\Images\Main\Lavendel.png" />
+    <Content Include="Content\Images\Main\map.jpg" />
     <Content Include="Content\Images\Main\Nacka Church.jpg" />
     <Content Include="Content\Images\Slideshow\01.jpg" />
     <Content Include="Content\Images\Slideshow\02.jpg" />
